--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name=viewport content="width=device-width, initial-scale=1">
   <title></title>
   <link href='https://fonts.googleapis.com/css?family=Marck+Script&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body class="page">
