--- a/source/index.html
+++ b/source/index.html
@@ -20,10 +20,10 @@
         <nav class="main-nav">
           <div class="container">
             <ul class="main-nav__list">
-              <li class="main-nav__item">about</li>
-              <li class="main-nav__item">work</li>
-              <li class="main-nav__item">blog</li>
-              <li class="main-nav__item">contacts</li>
+              <li class="main-nav__item"><a href="" class="main-nav__link">about</a></li>
+              <li class="main-nav__item"><a href="" class="main-nav__link">work</a></li>
+              <li class="main-nav__item"><a href="" class="main-nav__link">blog</a></li>
+              <li class="main-nav__item"><a href="" class="main-nav__link">contacts</a></li>
             </ul>
           </div>
         </nav>
