--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   <meta name=viewport content="width=device-width, initial-scale=1">
   <title></title>
   <link href='https://fonts.googleapis.com/css?family=Marck+Script&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page">
@@ -36,7 +36,7 @@
     <section class="intro">
       <div class="container">
         <h1 class="intro__title">Hello</h1>
-        <p class="intro__text">my name is Kate,</p>
+        <p class="intro__text  intro__text--main">my name is <span class="intro__text  intro__text--decor">Kate,</span></p>
         <p class="intro__text">i'm a junior frontend developer, Saint-Petersburg, Russia</p>
         <div class="social">
           <a class="social__link" href="#">
@@ -67,10 +67,10 @@
             </svg>
           </a>
         </div>
-        <div class="intro-description">
-          <p class="intro-description__text">Age: <span class="intro-description__text  intro-description__text--decor">23</span></p>
-          <p class="intro-description__text">Country: <span class="intro-description__text  intro-description__text--decor">Russia</span></p>
-          <p class="intro-description__text">Working at: <span class="intro-description__text  intro-description__text--decor">Freelance</span></p>
+        <div class="intro__description">
+          <p class="intro__text">Age: <span class="intro__text  intro__text--description">23</span></p>
+          <p class="intro__text">Country: <span class="intro__text  intro__text--description">Russia</span></p>
+          <p class="intro__text">Working at: <span class="intr__text  intro__text--description">Freelance</span></p>
         </div>
       </div>
     </section>
@@ -82,93 +82,112 @@
           <h1 class="layer__title  layer__title--main">About</h1>
           <p class="layer__text  layer__text--main">Do you want to know me?</p>
         </div>
-        <div class="layer__box">
-          <h2 class="layer__title">Who am i?</h2>
-          <p class="layer__text">Hello, my name is Kate, nice to meet you here, at my portfolio</p>
-          <p class="layer__text">I'm really pleased to see your interest in my work, hope you'll like what you'll see! Njoy ;) </p>
-        </div>
-        <div class="layer__box">
-          <img src="" alt="" class="layer__img">
-        </div>
-        <div class="layer__box">
-          <h2 class="layer__title">My skills</h2>
-          <p class="layer__text">Design</p>
-          <p class="layer__text  layer--decor">Adobe Photoshop</p>
-          <p class="layer__text  layer--decor">Adobe Illustrator</p>
-          <p class="layer__text  layer--decor">Adobe Indesign</p>
-          <p class="layer__text">Coding</p>
-          <p class="layer__text  layer--decor">Html/Html5</p>
-          <p class="layer__text  layer--decor">Css/Css3</p>
-          <p class="layer__text  layer--decor">Javascript/Jquery</p>
+        <div class="wrapper">
+          <div class="layer__box  layer__box--one_third_width">
+            <h2 class="layer__title">Who am i?</h2>
+            <p class="layer__text">Hello, my name is Kate, nice to meet you here, at my portfolio</p>
+            <p class="layer__text">I'm really pleased to see your interest in my work, hope you'll like what you'll see! Njoy ;) </p>
+          </div>
+          <div class="layer__box  layer__box--one_third_width">
+            <img src="" alt="" class="layer__img">
+          </div>
+          <div class="layer__box  layer__box--one_third_width">
+            <h2 class="layer__title">My skills</h2>
+            <p class="layer__text  layer__text--underline">Design</p>
+            <div class="layer__wrapper">
+              <p class="layer__text  layer__text--decor">Adobe Photoshop</p>
+            </div>
+            <div class="layer__wrapper">
+              <p class="layer__text  layer__text--decor">Adobe Illustrator</p>
+            </div>
+            <div class="layer__wrapper">
+              <p class="layer__text  layer__text--decor">Adobe Indesign</p>
+            </div>
+            <p class="layer__text  layer__text--underline">Coding</p>
+            <div class="layer__wrapper">
+              <p class="layer__text  layer__text--decor">Html/Html5</p>
+            </div>
+            <div class="layer__wrapper">
+              <p class="layer__text  layer__text--decor">Css/Css3</p>
+            </div>
+            <div class="layer__wrapper">
+              <p class="layer__text  layer__text--decor">Javascript/Jquery</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
     <section class="layer  layer--yellow">
-      <div class="layer__box  layer__box--intro">
-        <h1 class="layer__title  layer__title--main">Portfolio</h1>
-        <p class="layer__text  layer__text--main">Do you want to know me better?</p>
-      </div>
-      <div class="layer__box">
-        <h2 class="layer__title">Project name</h2>
-        <p class="layer__text">iOS 7 Weather App Design</p>
-        <h2 class="layer__title">Project description</h2>
-        <ul class="layer-list">
-          <li class="layer-list__item">Os 7 Design</li>
-          <li class="layer-list__item">Weather App icons</li>
-          <li class="layer-list__item">iPhone App Design</li>
-        </ul>
-        <p class="layer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pretium sem et justo tempor egestas quis at odio.
-Suspendisse nunc sem, ultrices congue posuere in, porttitor a sem.</p>
-        <h2 class="layer__title">Project web site</h2>
-        <ul class="layer-list">
-          <li class="layer-list__item">http://www.uipixels.com/</li>
-        </ul>
-        <h2 class="layer__title">Tags</h2>
-        <p class="layer__text">
-          iphone, iOs 7, weather app, design, apple
-        </p>
-      </div>
-      <div class="layer__box">
-        <div class="slider">
-          <img src="" alt="">
+      <div class="container">
+        <div class="layer__box  layer__box--intro">
+          <h1 class="layer__title  layer__title--main">Portfolio</h1>
+          <p class="layer__text  layer__text--main">Do you want to know me better?</p>
         </div>
-      </div>
-      <div class="layer__box">
-        <div class="portfolio">
-          <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
-          <p class="portfolio__text">blablabla</p>
-          <button class="portfolio__btn">+</button>
+        <div class="wrapper">
+          <div class="layer__box  layer__box--one_third_width">
+            <h2 class="layer__title">Project name</h2>
+            <p class="layer__text">iOS 7 Weather App Design</p>
+            <h2 class="layer__title">Project description</h2>
+            <ul class="layer-list">
+              <li class="layer-list__item">iOS 7 Design</li>
+              <li class="layer-list__item">Weather App icons</li>
+              <li class="layer-list__item">iPhone App Design</li>
+            </ul>
+            <p class="layer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pretium sem et justo tempor egestas quis at odio.
+    Suspendisse nunc sem, ultrices congue posuere in, porttitor a sem.</p>
+            <h2 class="layer__title">Project web site</h2>
+            <ul class="layer-list">
+              <li class="layer-list__item">http://www.uipixels.com/</li>
+            </ul>
+            <h2 class="layer__title">Tags</h2>
+            <p class="layer__text">
+              iphone, iOs 7, weather app, design, apple
+            </p>
+          </div>
+          <div class="layer__box">
+            <div class="slider">
+              <img src="" alt="">
+            </div>
+          </div>
         </div>
-        <div class="portfolio">
-          <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
-          <p class="portfolio__text">blablabla</p>
-          <button class="portfolio__btn">+</button>
-        </div>
-        <div class="portfolio">
-          <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
-          <p class="portfolio__text">blablabla</p>
-          <button class="portfolio__btn">+</button>
-        </div>
-        <div class="portfolio">
-          <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
-          <p class="portfolio__text">blablabla</p>
-          <button class="portfolio__btn">+</button>
-        </div>
-        <div class="portfolio">
-          <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
-          <p class="portfolio__text">blablabla</p>
-          <button class="portfolio__btn">+</button>
-        </div>
-        <div class="portfolio">
-          <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
-          <p class="portfolio__text">blablabla</p>
-          <button class="portfolio__btn">+</button>
-        </div>
-        <div class="portfolio">
-          <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
-          <p class="portfolio__text">blablabla</p>
-          <button class="portfolio__btn">+</button>
+        <div class="layer__box  layer__box--rombs">
+          <div class="portfolio">
+            <div class="portfolio__item">
+              <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
+              <p class="portfolio__text">blablabla</p>
+              <button class="portfolio__btn">+</button>
+            </div>
+          </div>
+          <div class="portfolio">
+            <div class="portfolio__item">
+              <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
+              <p class="portfolio__text">blablabla</p>
+              <button class="portfolio__btn">+</button>
+            </div>
+          </div>
+          <div class="portfolio">
+            <div class="portfolio__item">
+              <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
+              <p class="portfolio__text">blablabla</p>
+              <button class="portfolio__btn">+</button>
+            </div>
+          </div>
+          <div class="portfolio">
+            <div class="portfolio__item">
+              <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
+              <p class="portfolio__text">blablabla</p>
+              <button class="portfolio__btn">+</button>
+            </div>
+          </div>
+          <div class="portfolio">
+            <div class="portfolio__item">
+              <h3 class="portfolio__title">iOS 7 Weather App Design</h3>
+              <p class="portfolio__text">blablabla</p>
+              <button class="portfolio__btn">+</button>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
