--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   <meta name=viewport content="width=device-width, initial-scale=1">
   <title></title>
   <link href='https://fonts.googleapis.com/css?family=Marck+Script&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page">
@@ -80,13 +80,13 @@
         <div class="layer__box  layer__box--intro">
           <img src="" alt="" class="layer__img  layer__img--main">
           <h1 class="layer__title  layer__title--main">About</h1>
-          <p class="layer__text  layer__text--main">Do you want to know me?</p>
+          <p class="layer__text  layer__text--desktop">Do you want to know me?</p>
         </div>
         <div class="wrapper">
           <div class="layer__box  layer__box--one_third_width">
             <h2 class="layer__title">Who am i?</h2>
             <p class="layer__text">Hello, my name is Kate, nice to meet you here, at my portfolio</p>
-            <p class="layer__text">I'm really pleased to see your interest in my work, hope you'll like what you'll see! Njoy ;) </p>
+            <p class="layer__text  layer__text--desktop">I'm really pleased to see your interest in my work, hope you'll like what you'll see! Njoy ;) </p>
           </div>
           <div class="layer__box  layer__box--one_third_width">
             <img src="" alt="" class="layer__img">
@@ -122,7 +122,7 @@
       <div class="container">
         <div class="layer__box  layer__box--intro">
           <h1 class="layer__title  layer__title--main">Portfolio</h1>
-          <p class="layer__text  layer__text--main">Do you want to know me better?</p>
+          <p class="layer__text  layer__text--desktop">Do you want to know me better?</p>
         </div>
         <div class="wrapper">
           <div class="layer__box  layer__box--one_third_width">
