--- a/source/index.html
+++ b/source/index.html
@@ -219,6 +219,6 @@
   <footer class="page-footer">
 
   </footer>
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
