first pages commit

--- a/source/index.html
+++ b/source/index.html
@@ -183,7 +183,7 @@
           </div>
           <div class="portfolio">
             <div class="portfolio__item">
-              <h3 class="portfolio__title">Advanced intensiv</h3>
+              <h3 class="portfolio__title">Advanced course</h3>
               <p class="portfolio__text">blablabla</p>
               <button id="advanced_btn" class="portfolio__btn">+</button>
             </div>
