--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <p class="layer__text">создадите разметку, поработаете с графическим макетом в фотошопе, построите сетки страниц, оформите декоративные элементы и текстовое содержание, оптимизируете код и подготовите завершённый проект к публикации. На каждом этапе вашу работу будет проверять и комментировать личный наставник.</p>
               <h2 class="layer__title">Project web site</h2>
               <ul class="layer-list">
-                <li class="layer-list__item"><a href="http://tabasca.github.io/base_sedona" target="_blank">http://tabasca.github.io/base_sedona</a></li>
+                <li class="layer-list__item"><a href="http://tabasca.github.io/base_sedona/" target="_blank">http://tabasca.github.io/base_sedona</a></li>
               </ul>
               <h2 class="layer__title">Tags</h2>
               <p class="layer__text">
@@ -159,7 +159,7 @@
       Suspendisse nunc sem, ultrices congue posuere in, porttitor a sem.</p>
               <h2 class="layer__title">Project web site</h2>
               <ul class="layer-list">
-                <li class="layer-list__item">http://www.uipixels.com/</li>
+                <li class="layer-list__item"><a href="http://tabasca.github.io/50210-pink/" target="_blank">http://tabasca.github.io/50210-pink</a></li>
               </ul>
               <h2 class="layer__title">Tags</h2>
               <p class="layer__text">
@@ -183,7 +183,7 @@
           </div>
           <div class="portfolio">
             <div class="portfolio__item">
-              <h3 class="portfolio__title">Advanced intensiv</h3>
+              <h3 class="portfolio__title">Advanced course</h3>
               <p class="portfolio__text">blablabla</p>
               <button id="advanced_btn" class="portfolio__btn">+</button>
             </div>
@@ -219,6 +219,6 @@
   <footer class="page-footer">
 
   </footer>
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
