first pages commit

--- a/source/index.html
+++ b/source/index.html
@@ -159,7 +159,7 @@
       Suspendisse nunc sem, ultrices congue posuere in, porttitor a sem.</p>
               <h2 class="layer__title">Project web site</h2>
               <ul class="layer-list">
-                <li class="layer-list__item"><a href="http://tabasca.github.io/50210-pink/" target="_blank">http://tabasca.github.io/50210-pink</a></li>
+                <li class="layer-list__item"><a href="http://tabasca.github.io/advanced_pink/" target="_blank">http://tabasca.github.io/advanced_pink</a></li>
               </ul>
               <h2 class="layer__title">Tags</h2>
               <p class="layer__text">
