--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <main>
     <section class="intro">
       <div class="container">
+        <span class="testBtn">Тык</span>
         <h1 class="intro__title">Hello</h1>
         <p class="intro__text  intro__text--main">my name is <span class="intro__text  intro__text--decor">Kate,</span></p>
         <p class="intro__text">i'm a junior frontend developer, Saint-Petersburg, Russia</p>
