--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <video autoplay="autoplay" muted playsinline="playsinline" class="video">
-	<source src="https://www.youtube.com/watch?v=ZEBym6ssSwc" type="video/mp4">
+	<source src="/static-assets/video/swimming.mp4" type="video/mp4">
 </video>
