--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<source src="/static-assets/video/cats_1.mp4" type="video/mp4">
 </video>
 
-<button id="simple-clone">Clone Video WIthout Inserting</button>
-<button id="clone-and-insert">Clone Video And Insert After Original One</button>
+<button id="simple-clone">Clone video without inserting</button>
+<button id="clone-and-insert">Insert video (or clone and insert ) after original one</button>
 
 <script>
 	var cloneBtn = document.getElementById('simple-clone');
